objects/LH__Lookup_Helper_Setting__c.object
<CustomObject>
    <fields>
        <fullName>LH__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LH__AllowBlankOverwrite__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Clearing Existing Lookup Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LH__AllowOverwrite__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Overwriting Existing Lookup Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LH__Category_Field__c</fullName>
        <label>Category Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LH__Child_Object__c</fullName>
        <label>Child Object</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LH__Create_Category_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Category Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LH__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LH__Error_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LH__FK_Object__c</fullName>
        <label>FK Object</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LH__Ignored_Suggestions__c</fullName>
        <label>Ignored issue suggestions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LH__LH_Setting_Name_Check__c</fullName>
        <label>LH Setting Name Check</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LH__Last_Run__c</fullName>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LH__Lookup_Field__c</fullName>
        <label>Lookup Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LH__Lookup_Source_Polymorphic_Parent__c</fullName>
        <description>Used to record the parent of a polymorphic lookup field.</description>
        <inlineHelpText>Used to record the parent of a polymorphic lookup field.</inlineHelpText>
        <label>Lookup_Source_Polymorphic_Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH__Lookup_Source__c</fullName>
        <formula>IF(NOT(ISBLANK(LH__Category_Field__c)), LH__Category_Field__c, &apos;User Defined Filter&apos;)</formula>
        <label>Lookup Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH__Needs_Initialized__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LH__Parent_ID__c</fullName>
        <label>Parent Record</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LH__Parent_Object__c</fullName>
        <label>Parent Object</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LH__Records_Created__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Records Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LH__Schedule_Increment__c</fullName>
        <label>Schedule - Increment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LH__Schedule_NextFireTime__c</fullName>
        <label>Schedule - Next Fire Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LH__Schedule_PreviousFireTime__c</fullName>
        <label>Schedule - Previous Fire Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LH__Schedule_Unit__c</fullName>
        <label>Schedule - Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                    <default>true</default>
                    <label>Hours</label>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LH__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH__extPackage__c</fullName>
        <label>Extension Package</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <label>Lookup Helper Setting</label>
    <nameField>
        <label>Lookup Helper Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Helper Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>